--- a/style.css
+++ b/style.css
@@ -5,10 +5,19 @@ body {
 
 p {
   margin: 0 !important;
+  font-size: 1.75rem;
 }
 
-.font-size {
-  font-size: 1.5rem;
+input.form-control {
+  font-size: 1.25rem;
+}
+
+.form-check-label {
+  font-size: 1.25rem;
+}
+
+button.btn {
+  font-size: 1.25rem;
 }
 
 .bg-green {
